<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">天润移动</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="log">天润新能资产管理系统</string>
    <string name="please_userid">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="logined_member_displayName">logined_member_displayName</string>
    <string name="logined_member_personId">logined_member_personId</string>
    <string name="ip_address">ip_address</string>
    <string name="department">department</string>
    <string name="displayname">displayname</string>
    <string name="departmentms">departmentms</string>
    <string name="locationsite">locationsite</string>
    <string name="permissions">permissions</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="exit_text">再按一次退出程序</string>
    <string name="title_activity_login">登录界面</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_work_list">工单管理</string>
    <string name="title_activity_work_details">工单详情</string>
    <string name="title_activity_work_addnew">新建工单</string>
    <string name="title_activity_work_wplabor">计划员工</string>
    <string name="title_activity_work_labtrans">实际员工</string>
    <string name="title_activity_labtrans_details">员工详情</string>
    <string name="title_activity_labtrans_addnew">员工新增</string>
    <string name="title_activity_work_plan">工单计划</string>
    <string name="title_activity_woactivity_details">任务详情</string>
    <string name="title_activity_woactivity_addnew">任务新增</string>
    <string name="title_activity_wplabor_details">员工详情</string>
    <string name="title_activity_wplabor_addnew">员工新增</string>
    <string name="title_activity_wpmaterial_details">物料详情</string>
    <string name="title_activity_wpmaterial_addnew">物料新增</string>
    <string name="title_activity_wpservice_details">服务详情</string>
    <string name="title_activity_wptool_details">工具详情</string>
    <string name="title_activity_work_assignment">任务分配</string>
    <string name="title_activity_work_assignment_addnew">任务分配</string>
    <string name="title_activity_work_realinfo">实际情况</string>
    <string name="title_activity_work_assignment_details">任务分配详情</string>
    <string name="title_activity_work_failurereport">故障报告</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请连接Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="login_successful_hint">登陆成功</string>
    <string name="offline_login_text">首次登陆,必须访问网络</string>
    <string name="login_successful_text">离线登录成功</string>
    <string name="username_or_password_error">用户名或密码错误</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="login_please_login">尚未登录</string>
    <string name="item_serve_work">项目维修</string>
    <string name="plan_serve_work">计划工单</string>
    <string name="not_plan_serve_work">非计划工单</string>
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_dialog_hint">确定退出程序吗？</string>
    <string name="exit_dialog_title">提示</string>
    <string name="sure">确定</string>
    <string name="canel">取消</string>
    <string name="inputing">正在提交数据</string>
    <string name="clearing">正在清除数据</string>
    <string name="downloading">正在下载数据</string>
    <string name="downloading1">正在下载</string>
    <string name="polling_plan_text">巡检计划</string>
    <string name="polling_way_text">巡检路线</string>
    <string name="polling_order_text">巡检单</string>
    <string name="po_plan_text">采购计划</string>
    <string name="po_order_text">采购订单</string>
    <string name="po_invoice_text">发票</string>
    <string name="work_wonum">工单号:</string>
    <string name="work_desc">描述:</string>
    <string name="work_description_hint">请输入相关描述</string>
    <string name="work_udwotype">工单类型</string>
    <string name="work_udwotypedesc">工单类型描述</string>
    <string name="work_assetnum">设备编号</string>
    <string name="work_assetdesc">设备描述</string>
    <string name="work_location">位置编码</string>
    <string name="work_locationdesc">位置描述</string>
    <string name="work_status">状态</string>
    <string name="work_statusdesc">状态描述</string>
    <string name="work_longdescription">详细信息</string>
    <string name="work_isxq">消缺</string>
    <string name="work_isyhpc">排查隐患</string>
    <string name="work_powerloss">损失电量</string>
    <string name="work_speed">平均风速</string>
    <string name="work_largepart">大部件发放</string>
    <string name="work_issuematerial">物料发放</string>
    <string name="work_shutdown">停机</string>
    <string name="work_jpdetails">作业详情信息</string>
    <string name="work_jpnum">作业计划</string>
    <string name="work_jpnumdesc">作业计划描述</string>
    <string name="work_pmnum">PM</string>
    <string name="work_pmdesc">PM描述</string>
    <string name="work_onbehalfof">录入人工号</string>
    <string name="work_acstart">实际开始时间</string>
    <string name="work_actfinish">实际完成时间</string>
    <string name="work_targstartdate">计划开始时间</string>
    <string name="work_targcompdate">计划完成时间</string>
    <string name="work_faststarttime">最早开始时间</string>
    <string name="work_lastfinishtime">最晚完成时间</string>
    <string name="work_estdur">剩余时间</string>
    <string name="work_reportdate">报告日期</string>
    <string name="work_worktype">工作类型</string>
    <string name="work_parent">父工单</string>
    <string name="work_udprojectnum">项目编号</string>
    <string name="work_uudprojectnumdesc">项目编号描述</string>
    <string name="work_statusdate">状态日期</string>
    <string name="work_lctype">设备专业</string>
    <string name="work_woclass">类</string>
    <string name="work_failurecode">故障类</string>
    <string name="work_problemcode">问题代码</string>
    <string name="work_displayname">创建人</string>
    <string name="work_createdate">创建时间</string>
    <string name="work_reportedby">报告人</string>
    <string name="work_revise">修改</string>
    <string name="work_add">新增</string>
    <string name="work_work_flow">工作流</string>
    <string name="work_plan">工单计划</string>
    <string name="work_task">任务分配</string>
    <string name="work_realinfo">实际情况</string>
    <string name="work_report">故障报告</string>
    <string name="work_woactivity">任务</string>
    <string name="work_wplabor">员工</string>
    <string name="work_wpmaterial">物料</string>
    <string name="work_wpservice">服务</string>
    <string name="work_wptool">工具</string>
    <string name="woactivity_wosequence">序号</string>
    <string name="woactivity_taskid">任务</string>
    <string name="woactivity_description">摘要</string>
    <string name="woactivity_estdur">估计持续时间</string>
    <string name="woactivity_targstartdate">目标开始时间</string>
    <string name="woactivity_targcompdate">目标完成时间</string>
    <string name="woactivity_actstart">实际开始时间</string>
    <string name="woactivity_actfinish">实际完成时间</string>
    <string name="woactivity_woclass">记录类</string>
    <string name="woactivity_assetnum">资产</string>
    <string name="woactivity_assetdesc">资产描述</string>
    <string name="woactivity_location">位置</string>
    <string name="woactivity_locationdesc">位置描述</string>
    <string name="wplabor_taskid">任务</string>
    <string name="wplabor_amcrew">班组</string>
    <string name="wplabor_amcrewtype">班组类型</string>
    <string name="wplabor_crewworkgroup">班组工作组</string>
    <string name="wplabor_craft">工种</string>
    <string name="wplabor_quantity">数量</string>
    <string name="wplabor_laborcode">员工</string>
    <string name="wplabor_laborhrs">常规时数</string>
    <string name="labtrans_taskid">任务</string>
    <string name="labtrans_laborcode">员工</string>
    <string name="labtrans_craft">工种</string>
    <string name="labtrans_payrate">费率</string>
    <string name="labtrans_transtype">类型</string>
    <string name="labtrans_startdate">开始日期</string>
    <string name="labtrans_regularhrs">常规时数</string>
    <string name="wpmaterial_taskid">任务</string>
    <string name="wpmaterial_itemnum">项目</string>
    <string name="wpmaterial_itemqty">数量</string>
    <string name="wpmaterial_location">库房</string>
    <string name="wpmaterial_storelocsite">库房地点</string>
    <string name="wpmaterial_requestby">请求者</string>
    <string name="wpmaterial_unitcost">单位成本</string>
    <string name="wpmaterial_restype">预留类型</string>
    <string name="wpmaterial_requiredate">要求日期</string>
    <string name="wpservice_taskid">任务</string>
    <string name="wpservice_linetype">行类型</string>
    <string name="wpservice_requiredate">要求日期</string>
    <string name="wpservice_requestby">请求者</string>
    <string name="wptool_taskid">任务</string>
    <string name="wptool_itemnum">工具</string>
    <string name="wptool_itemqty">数量</string>
    <string name="wptool_rate">费率</string>
    <string name="assignment_taskid">任务</string>
    <string name="assignment_laborcode">员工</string>
    <string name="assignment_craft">工种</string>
    <string name="assignment_amcrewtype">班组类型</string>
    <string name="assignment_amcrew">班组</string>
    <string name="assignment_skilllevel">技能级别</string>
    <string name="assignment_vendor">供应商</string>
    <string name="assignment_contractnum">合同</string>
    <string name="assignment_crewworkgroup">班组工作组</string>
    <string name="assignment_scheduledate">调度开始时间</string>
    <string name="assignment_laborhrs">时数</string>
    <string name="assignment_status">状态</string>
    <string name="failurereport_failurecode">故障类</string>
    <string name="failurereport_faildate">故障日期</string>
    <string name="failurereport_remarkdesc">备注</string>
    <string name="failurereport_remarkenterdate">备注日期</string>
    <string name="failurereport_failurereport">故障代码</string>
    <string name="failurereport_problem">问题</string>
    <string name="failurereport_cause">原因</string>
    <string name="failurereport_remedy">措施</string>
    <string name="title_activity_po_order_">采购订单</string>
    <string name="poline_itemnum_title">项目:</string>
    <string name="update">检查更新</string>
    <string name="setting_download">数据下载</string>
    <string name="setting_data_clear">清除缓存</string>
    <string name="about_us_title">关于我们</string>
    <string name="swdl_text">上网电量</string>
    <string name="ssdl_text">损失电量</string>
    <string name="xdl_text">限电量</string>
    <string name="fdc_text">风电场</string>
    <string name="ms_text">描述</string>
    <string name="gzdj_text">故障等级</string>
</resources>