<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="cdhxqh.shekou.ui.activity.Work_detailsActivity">

    <include layout="@layout/title_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <Button
            android:id="@+id/work_woactivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:text="@string/work_woactivity"
            android:textColor="@drawable/text_selector" />

        <Button
            android:id="@+id/work_wplabor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:text="@string/work_wplabor"
            android:textColor="@drawable/text_selector" />

        <Button
            android:id="@+id/work_wpmaterial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:text="@string/work_wpmaterial"
            android:textColor="@drawable/text_selector" />

        <Button
            android:id="@+id/work_wpservice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:text="@string/work_wpservice"
            android:textColor="@drawable/text_selector" />

        <Button
            android:id="@+id/work_wptool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/light_gray"
            android:text="@string/work_wptool"
            android:textColor="@drawable/text_selector" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
</LinearLayout>