<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gztbbh_text_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""></TextView>

        <TextView
            android:id="@+id/fdc_text_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:ems="5"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/fdc_text"></TextView>

        <TextView
            android:id="@+id/ms_text_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="2"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ms_text"></TextView>

        <TextView
            android:id="@+id/gzdj_text_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gzdj_text"></TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

</LinearLayout>