<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/checkbox_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:button="@drawable/checkbox" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="5dp">

            <TextView
                android:id="@+id/item_num_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poline_itemnum_title"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/item_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/item_num_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimens_16dp" />


            <TextView
                android:id="@+id/item_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_num_title"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/item_desc_title"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/item_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_num_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/item_desc_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimens_16dp" />


        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>